tests/lustre/typechecking/shouldFail/test_output_in_assume2.lus
node b (x:int) returns (y:int);
let
y = x;
tel

node top(x: int) returns (y: int);
(*@contract
  gvar g: int = b(y) + 1;
  assume g>0;
*)
let
  y = x + 1;
tel
